--- a/system/core/templates/core/student_home.html
+++ b/system/core/templates/core/student_home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+<!-- CHECK student_home.html 2026-02-04 -->
 {% block content %}
 
 <!-- 全体フォントサイズ拡大 -->
@@ -28,7 +29,7 @@
 <div style="padding: 40px;">
     <h3 style="text-align: center; font-size: 1.6rem;">本日の履修科目（{{ today }}曜日）</h3>
 
-    {% if subjects_today %}
+    {% if today_subjects %}
         <table class="styled-table" style="margin: 20px auto; width: 80%; text-align:center; font-size: 1.1rem;">
             <thead>
                 <tr>
@@ -38,7 +39,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for subject in subjects_today %}
+                {% for subject in today_subjects %}
                 <tr>
                     <td style="padding: 10px;">{{ subject.table }}</td>
                     <td style="padding: 10px;">{{ subject.subject_name }}</td>
